--- a/styles.css
+++ b/styles.css
@@ -620,6 +620,7 @@ body {
 /* S U W A K I */
 input[type="range"].form-range {
     margin-top: 5px;
+    transform: translateY(-1px);
     height: 6px;
     border: 2px solid var(--border-color);
     border-radius: var(--border-radius);
@@ -1422,7 +1423,6 @@ input[type="range"].form-range::-ms-thumb {
         width: 148px;
     }
 
-    /* Dopasowanie suwaków */
     input[type="range"].form-range {
         box-sizing: border-box;
         width: 148px;
