--- a/styles.css
+++ b/styles.css
@@ -552,7 +552,7 @@ body {
     font-size: var(--small-font-size) !important;
     padding: 2px 12px 2px 4px !important;
     text-align: center !important;
-    background: var(--input-bg) !important;
+    background-color: var(--input-bg) !important;
     color: var(--primary-text) !important;
     border: 1px solid var(--border-color) !important;
     border-radius: 0 5px 5px 0 !important;
@@ -566,7 +566,7 @@ body {
     appearance: none !important;
     -webkit-appearance: none !important;
     -moz-appearance: none !important;
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8"><path fill="%23C2B280" d="M0 2l4 4 4-4z"/></svg>') !important;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 8 8"><path fill="%23C2B280" d="M0 2l4 4 4-4z"/></svg>') !important;
     background-repeat: no-repeat !important;
     background-position: right 4px center !important;
 }
@@ -588,7 +588,7 @@ body {
     appearance: none !important;
     -webkit-appearance: none !important;
     -moz-appearance: none !important;
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8"><path fill="%23C2B280" d="M0 2l4 4 4-4z"/></svg>') !important;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 8 8"><path fill="%23C2B280" d="M0 2l4 4 4-4z"/></svg>') !important;
     background-repeat: no-repeat !important;
     background-position: right 4px center !important;
 }
@@ -617,7 +617,7 @@ body {
 #prowizjaGroup .input-group .form-select.jednostka-select:focus,
 .variable-input-group .nadplata-type-select:focus,
 .variable-input-group .nadplata-effect-select:focus {
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8"><path fill="%23C2B280" d="M0 2l4 4 4-4z"/></svg>') !important;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 8 8"><path fill="%23C2B280" d="M0 2l4 4 4-4z"/></svg>') !important;
     background-repeat: no-repeat !important;
     background-position: right 4px center !important;
 }
@@ -1141,12 +1141,12 @@ input[type="range"].form-range:focus::-ms-thumb {
 .dark-mode .variable-input-group .nadplata-type-select,
 .dark-mode .variable-input-group .nadplata-effect-select,
 .dark-mode #prowizjaGroup .input-group .form-select.jednostka-select {
-    background-color: var(--input-bg) !important; /* Dodajemy background-color dla spójności */
-    appearance: none !important; /* Dodajemy dla pewności */
+    border: 1px solid var(--border-color) !important;
+    background-color: var(--input-bg) !important;
+    appearance: none !important;
     -webkit-appearance: none !important;
     -moz-appearance: none !important;
-    border: 1px solid var(--border-color) !important;
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8"><path fill="%23a3945c" d="M0 2l4 4 4-4z"/></svg>') !important;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 8 8"><path fill="%23a3945c" d="M0 2l4 4 4-4z"/></svg>') !important;
     background-repeat: no-repeat !important;
     background-position: right 4px center !important;
 }
@@ -1160,7 +1160,7 @@ input[type="range"].form-range:focus::-ms-thumb {
     appearance: none !important;
     -webkit-appearance: none !important;
     -moz-appearance: none !important;
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8"><path fill="%23a3945c" d="M0 2l4 4 4-4z"/></svg>') !important;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 8 8"><path fill="%23a3945c" d="M0 2l4 4 4-4z"/></svg>') !important;
     background-repeat: no-repeat !important;
     background-position: right 4px center !important;
 }
