--- a/styles.css
+++ b/styles.css
@@ -781,15 +781,17 @@ input[type="range"].form-range:focus::-ms-thumb {
 
 /* W Y N I K I   I   H A R M O N O G R A M */
 .harmonogram {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
     padding: 0;
     width: 100%;
     max-width: 100%;
     margin: 0 auto;
     overflow-x: auto;
+}
+
+.harmonogram-header {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
 }
 
 .harmonogram table {
