--- a/styles.css
+++ b/styles.css
@@ -307,9 +307,13 @@ body {
     width: 100%;
 }
 
+#bezpiecznyKredytLabel {
+    font-size: 10px;
+}
+
 .variable-rate-container {
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     text-align: center;
 }
 
